package org.oclinchoco.source;
import org.chocosolver.solver.variables.IntVar;

public abstract interface Source {}